--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: ADA Template Website
-description: A template website for ADA
+title: From Hops to Glass
+description: A Comprehensive Analysis of Beer Characteristics
 show_downloads: True
 navigation:
   - title: Home
